--- a/desafios/desafio 05 - cordel/index.html
+++ b/desafios/desafio 05 - cordel/index.html
@@ -10,11 +10,8 @@
 <body>
     <header>
             <h1>Cordel Moderno</h1>
-                <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">
-                    <h2>Por Milton Duarte</h2>
-                </a>
+                    <P>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></P>
     </header>
-    <main>
         <section class="white">
             <p>
                 Estou ficando cansado <br>
@@ -26,7 +23,7 @@
                 Vou dizer tudo em poesia.<br>
             </p>
         </section>
-        <div id="joaninha">
+        <div class="imagem" id="img01">
             <section>
                 <p>
                     Não é mais como era antes<br>
@@ -48,7 +45,8 @@
                 Agora é .com<br>
                 Se o saite é muito bom<br>
                 Ele vale um alto preço.<br>
-                
+            </p>
+            <p> 
                 Pra piorar a liguagem<br>
                 O emoticom é um risco<br>
                 Tem símbolo para tudo<br>
@@ -58,7 +56,7 @@
                 Decifre esse rabisco.<br>
             </p>
         </section>  
-        <div id="folhas">
+        <div class="imagem" id="img02">
             <section>
                 <p>
                     Tenho saudade das cartas<br>
@@ -80,7 +78,8 @@
                 Abriu outro aplicativo<br>
                 O mundo ficou cativo<br>
                 Da tecnologia do agora.<br>
-                
+            </p>
+                <p> 
                 Felizmente, pra orar<br>
                 Não precisa de internet<br>
                 Deus escuta todo mundo<br>
@@ -88,8 +87,8 @@
                 Dois pontos são dois joelhos<br>
                 Seus lábios são aparelhos<br>
                 Deixe que Deus interprete.<br>
-            </p>
+                </p>
         </section>
-    </main>
+        <footer>Apenas um exercício do <a href="https://www.cursoemvideo.com/" target="_blank">Curso em Vídeo</a></footer>
 </body>
 </html>
