--- a/exercícios/ex020/tabela_001.html
+++ b/exercícios/ex020/tabela_001.html
@@ -12,19 +12,14 @@
         }
         table{
             width: 300px;
+            height: 300px;
             border-collapse: collapse;
-        }
-        tr.linha{
-            background-color: maroon;
-            color: white;
         }
         td{
             border: 2px solid black;
-            padding: 2px;
-            
-        }
-        td.dado{
-            background-color: orange;
+            padding: 2px;  
+            text-align: center; /*alinhamento horizontal*/
+            vertical-align: middle; /*alinhamento vertical*/
         }
 
     </style>
@@ -44,10 +39,10 @@
             <td>B1</td>
             <td>C1</td>
         </tr>
-        <tr class="linha">
+        <tr>
             <td>A2</td>
             <td>B2</td>
-            <td class="dado">C2</td>
+            <td>C2</td>
         </tr>
         <tr>
             <td>A3</td>
