--- a/desafios/desafio 06 - table marge/ex003.html
+++ b/desafios/desafio 06 - table marge/ex003.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercício 003</title>
     <style>
     body{
         font-family:Arial, Helvetica, sans-serif;
@@ -17,6 +17,7 @@
         background-color: gray;
         color: white;
         font-weight: 900;
+        font-size: 1.2em;
     }
     .area{
         font-weight:900;
