--- a/exercícios/ex021/iframe003.html
+++ b/exercícios/ex021/iframe003.html
@@ -8,6 +8,7 @@
     <style>
         iframe{
             width: 98vw;
+            height: 30vw;
         }
     </style>
 </head>
@@ -15,12 +16,12 @@
     <h1>Faça uma escolha</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam a repudiandae quaerat sint explicabo iure deserunt reprehenderit? Expedita, optio inventore dolorem error consequuntur, laborum quia, id sunt accusamus enim sapiente?</p>
     <ul>
-        <li>Primeira</li>
-        <li>Segunda</li>
-        <li>Terceira</li>
+        <li><a href="tables/tabletest.html" target="frame">Primeira</a></li>
+        <li><a href="tables/tabela002.html" target="frame">Segunda</a></li>
+        <li><a href="tables/table006.html" target="frame">Terceira</a></li>
     </ul>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum maxime sequi deserunt voluptate recusandae voluptas error animi quia facilis aut excepturi cupiditate quos, qui voluptatum vitae commodi reprehenderit praesentium officiis?</p>
-    <iframe src="" frameborder="0" name="frame"></iframe>
+    <iframe src="" frameborder="0" name="frame"></iframe><!--Name é utilizado no target do link-->
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias quas ab laborum ullam in eveniet autem obcaecati, ipsam blanditiis ea architecto fugiat voluptates illo, debitis itaque tenetur dicta aliquid est! Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus maiores quas cupiditate veritatis quidem ex suscipit praesentium, illum natus dolorum! Quibusdam repellat magnam inventore, facilis vitae consequuntur et natus repudiandae.</p>
 </body>
 </html>
