--- a/exercícios/ex021/eiframe002.html
+++ b/exercícios/ex021/eiframe002.html
@@ -17,7 +17,7 @@
 <body>
     <h1>Teste com iframe</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti illo, quaerat aperiam officiis sapiente inventore asperiores iure recusandae quasi quod esse nostrum suscipit eos atque, voluptate aspernatur necessitatibus distinctio hic. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo veritatis pariatur, dignissimos sapiente explicabo sunt qui totam. Reprehenderit ea ullam ipsum dolores sunt eaque quo, consequuntur dicta rem labore fugiat.</p>
-    <iframe src="tabletest.html" frameborder="0"><p>Infelizmente seu navegador não é compatível</p></iframe>
+    <iframe src="tables/tabletest.html" frameborder="0"><p>Infelizmente seu navegador não é compatível</p></iframe>
     <p>O MAIS RECOMENDADO É UTILIZAR UMA DIV, APENAS TESTE</p>
     <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo asperiores veritatis sequi soluta, maiores doloribus, ex vel dignissimos officia eum et aut aspernatur esse fugit ipsam porro a iusto! Quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat doloribus tempora, quis ipsum voluptatibus sequi in voluptas? Numquam, necessitatibus laborum. Reiciendis consequatur nihil cum quibusdam provident! Impedit aperiam doloribus harum!</P>
 </body>
